--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
             <% if user_signed_in? %>
               <li class="js-user-menu <%= active_page?(user_session_path) ? '-active' : '' %>">
                 <button class="user-btn">
-                  <div class="c-avatar"><%= current_user.name ? current_user.name[0] : 'U' %></div>
+                  <div class="c-avatar -ph"></div>
                 </button>
                 <%= render 'shared/user_menu' %>
               </li>
