--- a/app/assets/stylesheets/components/_summary_info.scss
+++ b/app/assets/stylesheets/components/_summary_info.scss
@@ -5,7 +5,7 @@
     align-items: center;
     margin-bottom: $inline-space - 8px;
 
-    *:first-child {
+    > *:first-child {
       margin-right: $inline-space - 5px;
     }
   }
