--- a/app/views/shared/_icons.html.erb
+++ b/app/views/shared/_icons.html.erb
@@ -78,5 +78,25 @@
 <title>twitter</title>
 <path class="path1" d="M32.070 5.909c-1.178 0.523-2.449 0.877-3.778 1.035 1.359-0.813 2.402-2.103 2.891-3.639-1.271 0.755-2.677 1.301-4.179 1.594-1.197-1.278-2.908-2.076-4.802-2.076-3.631 0-6.577 2.946-6.577 6.579 0 0.516 0.056 1.016 0.169 1.498-5.468-0.275-10.315-2.891-13.562-6.876-0.567 0.977-0.89 2.106-0.89 3.311 0 2.281 1.161 4.296 2.927 5.476-1.079-0.032-2.093-0.331-2.982-0.821v0.081c0 3.189 2.268 5.848 5.28 6.451-0.553 0.154-1.133 0.232-1.736 0.232-0.424 0-0.836-0.040-1.237-0.117 0.836 2.613 3.266 4.518 6.146 4.567-2.251 1.766-5.090 2.818-8.171 2.818-0.531 0-1.056-0.030-1.57-0.090 2.912 1.864 6.37 2.953 10.086 2.953 12.104 0 18.72-10.024 18.72-18.718 0-0.286-0.006-0.572-0.019-0.853 1.286-0.928 2.404-2.086 3.283-3.405z"></path>
 </symbol>
+<symbol id="icon-funding_icon" viewBox="0 0 32 32">
+<title>funding_icon</title>
+<path class="path1" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M3.478 16.167v13.933"></path>
+<path class="path2" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M28.522 16.167v13.933"></path>
+<path class="path3" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M22.261 16.167v13.933"></path>
+<path class="path4" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M16 16.167v13.933"></path>
+<path class="path5" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M9.739 16.167v13.933"></path>
+<path class="path6" fill="none" stroke="#eaeaea" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M2.226 30.1h27.548"></path>
+<path class="path7" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M2.226 16.167h27.548"></path>
+<path class="path8" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M26.017 16.167c0-5.573-4.508-10.133-10.017-10.133s-10.017 4.56-10.017 10.133"></path>
+<path class="path9" fill="none" stroke="#fff" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M16 2.233v3.8"></path>
+</symbol>
+<symbol id="icon-colab_icon" viewBox="0 0 35 32">
+<title>colab_icon</title>
+<path class="path1" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M2.38 9.183l15.304-6.817 15.304 6.817"></path>
+<path class="path2" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M14.902 28.047c0-0.823-0.369-1.607-1.027-2.119-1.006-0.783-2.751-1.748-5.234-1.748s-4.228 0.965-5.234 1.748c-0.658 0.511-1.027 1.295-1.027 2.119v1.587h12.522v-1.587z"></path>
+<path class="path3" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M8.641 13.273c1.921 0 3.478 1.526 3.478 3.409s-1.557 3.409-3.478 3.409c-1.921 0-3.478-1.526-3.478-3.409s1.557-3.409 3.478-3.409v0z"></path>
+<path class="path4" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M32.989 28.047c0-0.823-0.369-1.607-1.027-2.119-1.006-0.783-2.751-1.748-5.234-1.748s-4.228 0.965-5.234 1.748c-0.658 0.511-1.027 1.295-1.027 2.119v1.587h12.522v-1.587z"></path>
+<path class="path5" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M26.728 13.273c1.921 0 3.478 1.526 3.478 3.409s-1.557 3.409-3.478 3.409c-1.921 0-3.478-1.526-3.478-3.409s1.557-3.409 3.478-3.409v0z"></path>
+</symbol>
 </defs>
 </svg>
