--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,8 +5,7 @@
         <h1>New Post</h1>
 
         <%= render 'form', post: @post %>
-
-        <% link_to 'Back', posts_path %>
+          </div>
       </div>
     </div>
   </div>
