--- a/app/views/shared/_user_menu.html.erb
+++ b/app/views/shared/_user_menu.html.erb
@@ -1,10 +1,13 @@
 <div class="c-user-menu">
   <ul>
     <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-      <%= link_to (t 'network'), user_path(:id => current_user.id) %></a>
+      <%= link_to (t 'network'), user_path(:data => 'network', :id => current_user.id) %></a>
     </li>
     <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
       <%= link_to (t 'projects'), user_path(:data => 'projects', :id => current_user.id) %></a>
+    </li>
+    <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
+      <%= link_to (t 'posts'), user_path(:data => 'posts', :id => current_user.id) %></a>
     </li>
   </ul>
   <ul>
