--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -4,7 +4,7 @@
       <div class="column small-12">
         <div class="c-card">
           <h3><%= link_to p.title, p %></h3>
-          <p><%= p.body && p.body.html_safe %></p>
+          <p><%= p.body && p.body.truncate(300).html_safe %></p>
         </div>
       </div>
     <% end %>
