--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -20,6 +20,16 @@
 
           <div class="form-actions">
             <%= f.button :submit, "Sign up", class: 'c-btn -primary' %>
+
+            <%- if devise_mapping.omniauthable? %>
+              <%- resource_class.omniauth_providers.each do |provider| %>
+                <% if provider.to_s == 'google_oauth2' %>
+                  <%= link_to "Sign up with Google", omniauth_authorize_path(resource_name, provider), class: 'c-btn -primary -google' %>
+                <% else %>
+                  <%= link_to "Sign up with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "c-btn -primary -#{provider.to_s}" %>
+                <% end %>
+              <% end -%>
+            <% end -%>
           </div>
         <% end %>
 
