--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -10,6 +10,11 @@
     <div class="wrapper">
       <div class="row collapse">
         <div class="column small-8">
+          <div class="c-avatar -big -ph -mg-bt"></div>
+        </div>
+      </div>
+      <div class="row collapse">
+        <div class="column small-8">
           <h1><%= @investigator.name %></h1>
           <table class="c-numbers-list">
             <thead>
