--- a/app/assets/stylesheets/components/_project-form.scss
+++ b/app/assets/stylesheets/components/_project-form.scss
@@ -10,7 +10,7 @@
   & h3.c-title{
     text-transform: none;
     color: #000;
-    margin: 40px 0;
+    margin: 20px 0;
     font-size: 25px;
   }
 
@@ -56,7 +56,7 @@
 
     & textarea{
       width: 100%;
-      min-height: 200px;
+      min-height: 140px;
       border: 1px solid #eee;
       border-radius: 0;
     }
@@ -83,6 +83,14 @@
       font-size: 12px;
       text-transform: uppercase;
       border-radius: 0;
+
+      &.addnew{
+        padding: 20px 60px;
+        background-color: #fff;
+        color: #68299b;
+        border: 1px solid;
+      }
+
     }
 
   }
