--- a/app/views/shared/_user_actions.html.erb
+++ b/app/views/shared/_user_actions.html.erb
@@ -1,12 +1,11 @@
-<div class="column small-4">
-  <div id="">
-    <ul class="c-btn-container">
-      <li><a href="/network/" class="c-btn -secondary -inverse">Follow</a></li>
-    </ul>
-    <ul class="c-btn-container">
-      <li><a href="/network/<%= current_user.id %>/projects/new" class="c-btn -transparent -extra-thin">+ Project</a></li>
-      <li><a href="/network/<%= current_user.id %>/posts/new" class="c-btn -transparent -extra-thin">+ Post</a></li>
-      <li><a href="/network/<%= current_user.id %>/events/new" class="c-btn -transparent -extra-thin">+ Event</a></li>
-    </ul>
-  </div>
+
+<div id="">
+  <ul class="c-btn-container">
+    <li><a href="/network/" class="c-btn -secondary -inverse">Follow</a></li>
+  </ul>
+  <ul class="c-btn-container">
+    <li><%= link_to '+ Project', new_user_project_path(user_id: current_user.id), class: 'c-btn -transparent -extra-thin' %></li>
+    <li><%= link_to '+ Post', new_post_path, class: 'c-btn -transparent -extra-thin' %></li>
+    <li><%= link_to '+ Event', new_user_event_path(user_id: current_user.id), class: 'c-btn -transparent -extra-thin' %></li>
+  </ul>
 </div>
