Action buttons in every entity page

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -32,6 +32,9 @@
           </table>
         </div>
         <div class="column small-4">
+          <% if (current_user) %>
+            <%= render "shared/user_actions" %>
+          <% end %>
         </div>
       </div>
     </div>
