--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -51,10 +51,11 @@
 
           </div>
         </div>
-
-        <% if (current_user) %>
-          <%= render "shared/user_actions" %>
-        <% end %>
+        <div class="column small-4">
+          <% if (current_user) %>
+            <%= render "shared/user_actions" %>
+          <% end %>
+        </div>
       </div>
 
 
