--- a/app/assets/stylesheets/layouts/_content.scss
+++ b/app/assets/stylesheets/layouts/_content.scss
@@ -1,4 +1,5 @@
 .l-content {
+  width: 100%;
   padding-top: $box-space;
   padding-bottom: $box-space;
 
@@ -11,5 +12,45 @@
   .l-content-article {
     font-family: $base-font-family-light;
     padding-right: $box-space;
+  }
+
+}
+
+.l-content-section {
+  font-family: $base-font-family-light;
+  padding-top: $box-space;
+  padding-bottom: $box-space;
+  border-bottom: 1px solid $border-color-1;
+
+  .column {
+    flex-flow: column;
+  }
+
+  h1, h2, h3 {
+    font-family: $base-font-family;
+  }
+
+  h1 {
+    margin-bottom: $box-space;
+  }
+
+  .investigator {
+    display: flex;
+    align-items: center;
+  }
+
+  .c-avatar {
+    margin-right: $inline-space;
+    & + p {
+      margin: 0;
+    }
+  }
+
+  .content {
+    padding-bottom: $box-space;
+  }
+
+  &:last-child {
+    border: 0;
   }
 }
