Follow: javascript way

--- a/app/views/shared/_user_actions.html.erb
+++ b/app/views/shared/_user_actions.html.erb
@@ -2,7 +2,7 @@
   <div>
     <ul class="c-btn-container">
       <li id="followButton">
-        <button type="submit" class="c-btn -secondary -inverse js-btn-follow"
+        <button class="c-btn -secondary -inverse js-btn-follow"
           data-followed="<%= @followed %>"
           data-id="<%= @followed_id %>"
           data-resource="<%= @followed_resource %>">
