--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -3,7 +3,7 @@
     <% items.each do |p| %>
       <div class="column small-12">
         <div class="c-card">
-          <h3><%= link_to p.title, p %></h3>
+          <h3 class="-underlined"><%= link_to p.title, p %></h3>
           <p><%= p.body && p.body.truncate(300).html_safe %></p>
         </div>
       </div>
