--- a/app/assets/javascripts/templates/form/input.hbs
+++ b/app/assets/javascripts/templates/form/input.hbs
@@ -14,6 +14,7 @@
   {{#if required}}required="true"{{/if}}
   {{#if min}}min="{{min}}"{{/if}}
   {{#if max}}max="{{max}}"{{/if}}
+  {{#if checked}}checked="true"{{/if}}
 />
 {{#if info}}
   <span> {{info}}</span>
