Posts hanlde errors

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -93,8 +93,15 @@ label {
   }
 }
 
+.required {
+  font-size: $small-font-size;
+  margin-top: 0;
+  padding-top: 0;
+}
+
 .error {
   font-size: $small-font-size;
   margin-top: 0;
   padding-top: 0;
+  color: red;
 }
