--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -6,6 +6,11 @@
   height: 100%;
   background-color: $primary-color;
 
+  &.-relative {
+    position: relative;
+    min-height: 350px;
+  }
+
   .leaflet-bar {
     border-radius: 0;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
