--- a/app/views/data/_list.html.erb
+++ b/app/views/data/_list.html.erb
@@ -1,3 +1,14 @@
-<div id="countryData" class="wrapper">
+<div class="wrapper">
+  <div id="countryData" class="c-data"></div>
+</div>
 
+<div class="wrapper">
+  <div class="row collapse">
+    <div class="column small-12 medium-8 large-8">
+      <div id="countryDataMap" class="c-map -relative"></div>
+    </div>
+    <div class="column small-12 medium-4 large-4">
+      <div id="countryDataLegendMap"></div>
+    </div>
+  </div>
 </div>
