Change map markers depending on current tab

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -10,7 +10,7 @@
   color: $inverse-font-color;
 
   &.-ph {
-    background-image: url('placeholder.png');
+    background-image: asset-url('placeholder.png');
     background-size: cover;
   }
 
