--- a/app/assets/stylesheets/components/_infowindow.scss
+++ b/app/assets/stylesheets/components/_infowindow.scss
@@ -7,8 +7,13 @@
   text-align: center;
   font-family: $base-font-family;
 
+  &.-no-iteraction {
+    pointer-events: none;
+  }
+
   h3 {
     width: 100%;
+    color: $base-font-color;
 
     & > a {
       color: $base-font-color;
