User bottons in specific pages

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -51,6 +51,7 @@
   &.-secondary {
     color: $inverse-font-color;
     background-color: $secondary-color;
+    border: 1px solid $secondary-color;
 
     &.-inverse {
       background-color: $inverse-font-color;
