--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,10 +6,17 @@
       <div class="row">
         <div class="column small-12">
           <h1><%= @post.title %></h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column small-12 medium-8 align-middle">
           <div class="investigator">
             <div class="c-avatar -ph -small"></div>
             <p><%= investigator && investigator.name && investigator.name %></p>
           </div>
+        </div>
+        <div class="column small-12 medium-4 -align-bottom">
+          <%= link_to 'Add Post', (user_signed_in?) ? new_post_path : user_session_path, class: 'c-btn -secondary -inverse' %>
         </div>
       </div>
     </div>
