--- a/app/sql_queries/people_map_points.sql.erb
+++ b/app/sql_queries/people_map_points.sql.erb
@@ -2,6 +2,13 @@ select distinct on (memberships.membership_type, investigators.id)
 investigators.id as resource_id,
 investigators.name as resource_name,
 countries.country_name as location_name,
+addresses.country_name as location_country_name,
+addresses.city as location_city,
+addresses.line_1 as location_line_1,
+addresses.line_2 as location_line_2,
+addresses.line_3 as location_line_3,
+addresses.postcode as location_postcode,
+addresses.state as location_state,
 '{"type":"Point","coordinates":[' || addresses.latitude || ',' || addresses.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
 'point' as type
@@ -53,5 +60,5 @@ from investigators
     <% if @params[:user] %>
       and projects.user_id = <%= quote @params[:user] %>
     <% end %>
-group by resource_id, resource_name, location_name, centroid, iso, memberships.membership_type
+group by resource_id, resource_name, location_name, location_country_name, location_city, location_line_1, location_line_2, location_line_3, location_postcode, location_state, centroid, iso, memberships.membership_type
 order by memberships.membership_type desc
