--- a/app/sql_queries/projects_map_points.sql.erb
+++ b/app/sql_queries/projects_map_points.sql.erb
@@ -4,6 +4,13 @@ projects.title as title,
 investigators.name as investigator_name,
 investigators.id as investigator,
 countries.country_name as location_name,
+addresses.country_name as location_country_name,
+addresses.city as location_city,
+addresses.line_1 as location_line_1,
+addresses.line_2 as location_line_2,
+addresses.line_3 as location_line_3,
+addresses.postcode as location_postcode,
+addresses.state as location_state,
 '{"type":"Point","coordinates":[' || addresses.latitude || ',' || addresses.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
 'point' as type,
@@ -59,4 +66,4 @@ from projects
     <% if @params[:user] %>
       and projects.user_id = <%= quote @params[:user] %>
     <% end %>
-group by project, title, location_name, centroid, iso, investigator_name, investigator, is_project_lead
+group by project, title, location_name, location_country_name, location_city, location_line_1, location_line_2, location_line_3, location_postcode, location_state, centroid, iso, investigator_name, investigator, is_project_lead
