--- a/app/assets/stylesheets/components/_infowindow.scss
+++ b/app/assets/stylesheets/components/_infowindow.scss
@@ -11,6 +11,21 @@
     pointer-events: none;
   }
 
+  > * {
+    margin: 20px 0 0;
+
+    &:first-child { margin: 0; }
+  }
+
+  .investigator {
+    > * {
+      display: block;
+      margin: 5px 0 0;
+
+      &:first-child { margin: 0; }
+    }
+  }
+
   h3 {
     width: 100%;
     color: $base-font-color;
@@ -30,9 +45,5 @@
         opacity: .7;
       }
     }
-  }
-
-  .c-tag {
-    margin-top: 15px;
   }
 }
