--- a/app/assets/stylesheets/layouts/_grid.scss
+++ b/app/assets/stylesheets/layouts/_grid.scss
@@ -9,9 +9,12 @@
 
 .l-grid {
   border-top:  1px solid $border-color-1;
+
   .column {
     display: flex;
     align-items: stretch;
+
+    &.-column { flex-flow: column; }
   }
 
   .l-content, .l-sidebar {
