--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -82,11 +82,9 @@
 <div class="l-grid" id="content">
   <% if @current_type === 'projects' %>
     <%= render 'projects/list', items: @items, more: @more %>
-  <% #else @current_type %>
-    <% #render 'investigators/list', items: @items, more: @more %>
   <% elsif @current_type === 'posts' %>
     <%= render 'posts/list', items: @items, more: @more %>
   <% elsif @current_type === 'network' %>
-    <%= render 'investigators/list', items: @items, more: @more %>
+    <%= render 'network' %>
   <% end %>
 </div>
