--- a/app/sql_queries/projects_map_points.sql.erb
+++ b/app/sql_queries/projects_map_points.sql.erb
@@ -11,6 +11,7 @@ addresses.line_2 as location_line_2,
 addresses.line_3 as location_line_3,
 addresses.postcode as location_postcode,
 addresses.state as location_state,
+organizations.name as organization_name
 '{"type":"Point","coordinates":[' || addresses.latitude || ',' || addresses.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
 'point' as type,
@@ -21,6 +22,7 @@ from projects
     inner join investigators on investigators.id = research_units.investigator_id
     inner join addresses on research_units.address_id = addresses.id
     inner join countries on addresses.country_id = countries.id
+    inner join organizations on organizations.id = addresses.organization_id
      <% if @params[:organizations] || @params[:organization_types] %>
       inner join organizations on addresses.organization_id = organizations.id
     <% end %>
@@ -66,4 +68,4 @@ from projects
     <% if @params[:user] %>
       and projects.user_id = <%= quote @params[:user] %>
     <% end %>
-group by project, title, location_name, location_country_name, location_city, location_line_1, location_line_2, location_line_3, location_postcode, location_state, centroid, iso, investigator_name, investigator, is_project_lead
+group by project, title, location_name, location_country_name, location_city, location_line_1, location_line_2, location_line_3, location_postcode, location_state, centroid, iso, investigator_name, investigator, is_project_lead, organization_name
