--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,6 +4,10 @@
   background-color: $body-bg-color;
   box-shadow: 0 0 0 1px $border-color-1;
 
+  &.-pad-bigger {
+    padding: $box-space + 15px;
+  }
+
   h2 {
     margin-top: $inline-space;
   }
