--- a/app/assets/stylesheets/layouts/_sidebar.scss
+++ b/app/assets/stylesheets/layouts/_sidebar.scss
@@ -1,5 +1,6 @@
 .l-sidebar {
   width: 100%;
+  height: 100%;
   border-left: 1px solid $border-color-1;
   padding: $box-space;
   padding-right: 0;
