--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -1,20 +1,36 @@
 <div class="row">
-  <div class="column row small-12 medium-8 -column">
+  <div class="column small-12 medium-8 -column">
     <article>
-      <div class="l-content wrapper">
+      <div class="l-content -no-br wrapper">
         <h2 class=""><%= t 'investigators' %></h2>
+        <% if @followPeople.size <= 0 %>
+          <p>No investigators</p>
+        <% end %>
       </div>
-      <%= render 'investigators/list', items: @followPeople, more: false %>
+      <%= render 'investigators/net_list', items: @followPeople %>
     </article>
 
     <article>
-      <div class="l-content wrapper">
+      <div class="l-content -no-br wrapper">
         <h2><%= t 'projects' %></h2>
+        <% if @followProjects.size <= 0 %>
+          <p>No projects</p>
+        <% end %>
       </div>
-      <%= render 'projects/list', items: @followProjects, more: false %>
+      <%= render 'projects/net_list', items: @followProjects %>
+    </article>
+
+    <article>
+      <div class="l-content -no-br wrapper">
+        <h2><%= t 'events' %></h2>
+        <% if @followEvents.size <= 0 %>
+          <p>No events</p>
+        <% end %>
+      </div>
+      <%= render 'events/net_list', items: @followEvents %>
     </article>
   </div>
-  <div class="column small-12 medium-4">
+  <div class="column row small-12 medium-4">
     <aside class="l-sidebar">
       <div class="sidebar-item">
         <h2><%= t 'countries' %></h2>
