--- a/app/assets/javascripts/templates/infowindow.hbs
+++ b/app/assets/javascripts/templates/infowindow.hbs
@@ -4,10 +4,15 @@
     {{#if investigator}}
       <div class="investigator">
         <a href="/investigators/{{investigator}}">{{investigator_name}}</a>
+        <span class="c-tag">{{#if is_project_lead}}Project lead{{else}}Collaborator{{/if}}</span>
+      </div>
+      <div class="organization">
+        {{#if organization}}
+          <a href="/organizations/{{organization}}">{{organization_name}}</a>
+        {{/if}}
         {{#if location_city}}
           <p>{{location_city}}, {{location_country_name}}</p>
         {{/if}}
-        <span class="c-tag">{{#if is_project_lead}}Project lead{{else}}Collaborator{{/if}}</span>
       </div>
     {{/if}}
   {{/if}}
@@ -16,5 +21,15 @@
   {{/if}}
   {{#if resource_id}}
     <h3><a href="/investigators/{{resource_id}}">{{resource_name}}</a></h3>
+    {{#if organization}}
+      <div class="organization">
+        {{#if organization}}
+          <a href="/organizations/{{organization}}">{{organization_name}}</a>
+        {{/if}}
+        {{#if location_city}}
+          <p>{{location_city}}, {{location_country_name}}</p>
+        {{/if}}
+      </div>
+    {{/if}}
   {{/if}}
 </div>
