--- a/app/assets/stylesheets/components/_infowindow.scss
+++ b/app/assets/stylesheets/components/_infowindow.scss
@@ -17,7 +17,7 @@
     &:first-child { margin: 0; }
   }
 
-  .investigator {
+  .investigator, .organization {
     > * {
       display: block;
       margin: 5px 0 0;
