--- a/app/sql_queries/people_map_points.sql.erb
+++ b/app/sql_queries/people_map_points.sql.erb
@@ -9,6 +9,7 @@ addresses.line_2 as location_line_2,
 addresses.line_3 as location_line_3,
 addresses.postcode as location_postcode,
 addresses.state as location_state,
+organizations.id as organization,
 organizations.name as organization_name,
 '{"type":"Point","coordinates":[' || addresses.latitude || ',' || addresses.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
@@ -62,5 +63,5 @@ from investigators
     <% if @params[:user] %>
       and projects.user_id = <%= quote @params[:user] %>
     <% end %>
-group by resource_id, resource_name, location_name, location_country_name, location_city, location_line_1, location_line_2, location_line_3, location_postcode, location_state, organization_name, centroid, iso, memberships.membership_type
+group by resource_id, resource_name, location_name, location_country_name, location_city, location_line_1, location_line_2, location_line_3, location_postcode, location_state, organization_name, organization, centroid, iso, memberships.membership_type
 order by memberships.membership_type desc
