--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -32,6 +32,10 @@
     padding: $button-y-padding 0;
   }
 
+  &.-mg-left {
+
+  }
+
   &.-primary {
     color: $inverse-font-color;
     background-color: $primary-color;
