--- a/app/assets/stylesheets/layouts/_grid.scss
+++ b/app/assets/stylesheets/layouts/_grid.scss
@@ -16,6 +16,11 @@
     &.-align-bottom {
       align-items: flex-end;
     }
+
+    &.-align-right {
+      flex-flow: row;
+      justify-content: flex-end;
+    }
   }
 
   .l-content, .l-sidebar {
