--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,11 +15,9 @@
             <p><%= investigator && investigator.name && investigator.name %></p>
           </div>
         </div>
-        <div class="column small-12 medium-4">
-          <ul class="c-btn-container">
-            <li><%= link_to 'Add Post', (user_signed_in?) ? new_post_path : user_session_path, class: 'c-btn -secondary -inverse' %></li>
-            <li><button class="c-btn -secondary -inverse js-share-button" data-actiona="save"><%= t 'share' %></button></li>
-          </ul>
+        <div class="column small-12 medium-4 -align-right">
+          <%= link_to 'Add Post', (user_signed_in?) ? new_post_path : user_session_path, class: 'c-btn -secondary -inverse' %>
+          <button class="c-btn -secondary -inverse -mg-left js-share-button" data-actiona="save"><%= t 'share' %></button>
         </div>
       </div>
     </div>
