--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -16,6 +16,7 @@
 
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
+    <div id="timeline" class="c-timeline"></div>
   </div>
 
   <div id="legend" class="c-legend -main"></div>
