--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -1,5 +1,11 @@
 <% title @investigator.name %>
 
+<% if user_signed_in? && current_user.investigator == @investigator %>
+  <%= link_to 'Remove relation', remove_relation_investigator_path(@investigator), method: :patch %>
+<% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
+  <%= link_to 'Relation request', relation_request_investigator_path(@investigator), method: :patch %>
+<% end %>
+
 <section class="l-app -full">
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
