--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,11 @@
 <% title @project.title %>
 
+<% if user_signed_in? && current_user.projects.include?(@project) %>
+  <%= link_to 'Remove relation', remove_relation_project_path(@project), method: :patch %>
+<% elsif user_signed_in? %>
+  <%= link_to 'Relation request', relation_request_project_path(@project), method: :patch %>
+<% end %>
+
 <section class="l-app -full">
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
