--- a/app/views/events/_net_list.html.erb
+++ b/app/views/events/_net_list.html.erb
@@ -1,7 +1,7 @@
 <% if items && items.size() > 0 %>
-  <div class="row collapse">
+  <div class="row collapse -no-mrg">
     <% items.each do |e| %>
-      <div class="column small-12 medium-4">
+      <div class="column small-12 medium-6">
         <div class="c-card -events">
           <% if e.country? %>
             <h3 class="-underlined -alternative">
