--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -3,6 +3,10 @@
   padding: 0;
   margin: 0;
 
+  &.-mg-bottom {
+    margin-bottom: $box-space;
+  }
+
   .list-item {
     display: block;
     font-family: $base-font-family-light;
@@ -14,6 +18,16 @@
 
     &:hover {
       color: $primary-color;
+    }
+
+    & a.-uppercase {
+      font-weight: bold;
+      text-transform: uppercase;
+      color: $secondary-color;
+
+      &:hover {
+        opacity: .6;
+      }
     }
   }
 }
