--- a/app/assets/stylesheets/layouts/_grid.scss
+++ b/app/assets/stylesheets/layouts/_grid.scss
@@ -10,11 +10,23 @@
 .l-grid {
   border-top:  1px solid $border-color-1;
 
+  .row {
+    .-no-mrg { margin: 0; }
+  }
+
   .column {
     display: flex;
     align-items: stretch;
 
     &.-column { flex-flow: column; }
+
+    &.-extra {
+      display: none;
+
+      @media screen and (min-width: 40.063em) {
+        display: inherit;
+      }
+    }
   }
 
   .l-content, .l-sidebar {
