--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -1,9 +1,9 @@
 <% if items && items.size() > 0 %>
-  <div class="row collapse">
+  <div class="row collapse -no-mrg">
     <% items.each do |e| %>
       <div class="column small-12 medium-6">
-        <div class="c-card -pad-bigger -person">
-          <div class="c-avatar -ph -mg-bt"></div>
+        <div class="c-card -pad-bigger -no-shadow -person">
+          <div class="c-avatar -medium -ph -mg-bt"></div>
           <h2><a href="/investigators/<%=e.id%>"><%=e.name%></a></h2>
         </div>
       </div>
