--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row collapse">
   <div class="column small-12 medium-8 -column">
     <article>
-      <div class="l-content -no-br wrapper">
+      <div class="l-content -no-br -br-bottom wrapper">
         <h2 class=""><%= t 'investigators' %></h2>
         <% if @followPeople.size <= 0 %>
           <p>No investigators</p>
@@ -11,7 +11,7 @@
     </article>
 
     <article>
-      <div class="l-content -no-br wrapper">
+      <div class="l-content -br-bottom wrapper">
         <h2><%= t 'projects' %></h2>
         <% if @followProjects.size <= 0 %>
           <p>No projects</p>
@@ -21,7 +21,7 @@
     </article>
 
     <article>
-      <div class="l-content -no-br wrapper">
+      <div class="l-content -no-br -br-bottom wrapper">
         <h2><%= t 'events' %></h2>
         <% if @followEvents.size <= 0 %>
           <p>No events</p>
@@ -30,14 +30,17 @@
       <%= render 'events/net_list', items: @followEvents %>
     </article>
   </div>
+
   <div class="column row small-12 medium-4">
-    <aside class="l-sidebar">
-      <div class="sidebar-item">
+    <aside class="l-sidebar -no-pad">
+      <div class="l-content -no-br wrapper">
         <h2><%= t 'countries' %></h2>
-        <ul class="c-list">
+      </div>
+      <div class="wrapper">
+        <ul class="c-list -mg-bottom">
           <% if @followCountries.size > 0 %>
             <% @followCountries.each do |c| %>
-              <li class="list-item -mg-less"><%= link_to c.country_name, country_path(iso: c.country_iso_3) %></li>
+              <li class="list-item"><%= link_to c.country_name, country_path(iso: c.country_iso_3), class: '-uppercase' %></li>
             <% end %>
           <% else %>
             <p>No countries</p>
@@ -45,12 +48,14 @@
         </ul>
       </div>
 
-      <div class="sidebar-item">
+      <div class="l-content wrapper">
         <h2><%= t 'cancer_types' %></h2>
-        <ul class="c-list">
+      </div>
+      <div class="wrapper">
+        <ul class="c-list -mg-bottom">
           <% if @followCancerTypes.size > 0 %>
             <% @followCancerTypes.each do |ct| %>
-              <li class="list-item -mg-less"><%= link_to ct.name, cancer_path(id: ct.id) %></li>
+              <li class="list-item -uppercase"><%= link_to ct.name, cancer_path(id: ct.id), class: '-uppercase' %></li>
             <% end %>
           <% else %>
             <p>No cancer types</p>
