--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,8 +26,8 @@
                   <li><%= user.position ? user.position : '' %></li>
                 </ul>
                 <ul class="c-pipe-list">
-                  <li><%= @following ? @following : 0 %> Following</li>
-                  <li><%= @followers ? @followers : 0 %> Followers</li>
+                  <li><%= @following %> Following</li>
+                  <li><%= @followers %> Followers</li>
                 </ul>
               </div>
               <div class="column small-12 medium-6">
