fixing profile network

--- a/app/sql_queries/investigators_count.sql.erb
+++ b/app/sql_queries/investigators_count.sql.erb
@@ -48,5 +48,5 @@ WHERE memberships.membership_type = <%= @params[:membership_type].to_i %>
   and (projects.end_date < date(<%= quote @params[:end_date] %>))
 <% end %>
 <% if @params[:user] %>
-  and project_users.user_id = <%= quote @params[:user] %> and project_users.is_approved = 1
+  and project_users.user_id = <%= quote @params[:user] %> and project_users.is_approved = true
 <% end %>
