Show errors when uploading file

--- a/app/views/admin/excel_upload/new.html.erb
+++ b/app/views/admin/excel_upload/new.html.erb
@@ -2,4 +2,16 @@
   <h2>Excel upload page</h2>
 
   <div id="file-uploader"></div>
+  <div class="file-uploaded-errors">
+    <h3>Uploaded file errors</h3>
+    <table id="errors">
+      <thead>
+        <tr>
+          <th>Project id</th>
+          <th>Errors</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 </div>
