Icons: remove default hover

--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -22,11 +22,9 @@
 
   &.-inverse { fill: $body-bg-color; }
 
-  &:hover {
-    opacity: .5;
-
-    &.-hv-opac { opacity: .5; }
-    &.-hv-blue { fill: $dark-sky-blue; }
-    &.-hv-black { fill: $black; }
+  &.-hv-opac {
+    &:hover {
+      opacity: .5;
+    }
   }
 }
