Buttons: all the map buttons with its hover

--- a/app/assets/stylesheets/components/_actionbar.scss
+++ b/app/assets/stylesheets/components/_actionbar.scss
@@ -17,7 +17,7 @@
     }
 
     .-active {
-      background-color: rgba(90, 173, 228, 0.7);
+      background-color: darken($primary-color, 5%);
     }
   }
 
