--- a/app/assets/javascripts/templates/actionbar.hbs
+++ b/app/assets/javascripts/templates/actionbar.hbs
@@ -1,7 +1,7 @@
 <ul class="c-actionbar">
 
   <li class="actionbar-item">
-    <button class="c-btn -thin js-actionbar-action" data-action="layers">
+    <button class="c-btn -action -thin js-actionbar-action" data-action="layers">
       <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-layers"></use>
       </svg>
@@ -11,7 +11,7 @@
   </li>
 
   <li class="actionbar-item">
-    <button class="c-btn -thin js-actionbar-action" data-action="save">
+    <button class="c-btn -action -thin js-actionbar-action" data-action="save">
       <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-share"></use>
       </svg>
