--- a/app/views/shared/_user_actions.html.erb
+++ b/app/views/shared/_user_actions.html.erb
@@ -18,13 +18,13 @@
     </li>
   </ul>
   <ul class="c-btn-container">
-    <% if controller_name == 'projects' %>
+    <% if controller_name == 'projects' || controller_name == 'users' %>
       <li><%= link_to '+ Project', (user_signed_in?) ? new_user_project_path(user_id: current_user.id) : user_session_path, class: 'c-btn -transparent -extra-thin' %></li>
     <% end %>
     <% if controller_name != 'investigators' %>
       <li><%= link_to '+ Post', (user_signed_in?) ? new_post_path : user_session_path, class: 'c-btn -transparent -extra-thin' %></li>
     <% end %>
-    <% if controller_name == 'events' %>
+    <% if controller_name == 'events' || controller_name == 'users' %>
       <li><%= link_to '+ Event', (user_signed_in?) ? new_user_event_path(user_id: current_user.id) : user_session_path, class: 'c-btn -transparent -extra-thin' %></li>
     <% end %>
   </ul>
