--- a/app/assets/javascripts/templates/form/pickadate.hbs
+++ b/app/assets/javascripts/templates/form/pickadate.hbs
@@ -1,5 +1,5 @@
-<label for="{{name}}">
+<label for="{{slug}}">
   {{label}}
 </label>
-<input type="text" name="{{name}}" id="{{name}}" class="pickadate-input" value="">
-<div id="{{name}}-container" class="pickadate-container"></div>
+<input type="text" name="{{name}}" id="{{slug}}" class="pickadate-input" value="">
+<div id="{{slug}}-container" class="pickadate-container"></div>
