--- a/app/views/network_events/new.html.erb
+++ b/app/views/network_events/new.html.erb
@@ -1,7 +1,7 @@
 <div class="l-content">
   <div class="wrapper">
     <div class="row">
-      <div class="column small-12 medium-8 large-6">
+      <div class="column small-12">
         <h1>New Event</h1>
 
         <%= render 'form', post: @event %>
